@@ -4,7 +4,6 @@ FUSE_3.0 {
 		fuse_exit;
 		fuse_exited;
 		fuse_invalidate;
-		fuse_is_lib_option;
 		fuse_loop;
 		fuse_loop_mt;
 		fuse_loop_mt_proc;
